Fixed a bug in client when a challenge is sent just before time ends. Updated the colors for player 1 and 2 to not be confused with rejection. Changed the structure of history table entry to be more readable. Updated Screenshot.

--- a/renderer/variables.scss
+++ b/renderer/variables.scss
@@ -3,4 +3,7 @@ $box-color: rgb(61, 61, 61);
 $border-color: rgb(134, 134, 134);
 $border-width: 1px;
 
+$player-1-color: #89B6A5;
+$player-2-color: #845A6D;
+
 $font-color: white;
